Untrack plans directory, add advanced test infrastructure
Changes:
- Remove plans/ from git tracking (files kept locally)
- Update .gitignore to ignore entire plans/ directory
- Add AdvancedComparisonIT.java with 8 parameterized tests
- Add 8 advanced test cases in use-cases/advanced/
- Add --timeout and --max-turns CLI options to RunAITest
- Auto-configure 40min timeout and 25 max turns for advanced category

Advanced test cases:
- config-parser-fix, log-analysis-fix, multi-file-refactor
- security-vulnerabilities, debug-race-condition
- implement-from-spec, spring-rest-api

--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,6 @@ hs_err_pid*
 replay_pid*
 
 ### Planning and Internal Documentation ###
-# Ignore planning docs except learnings (tracked for knowledge retention)
-plans/*
-!plans/learnings/
+# Ignore all planning docs (internal use only)
+plans/
 tests/ai-driver/logs/
